get rawls client working