@@ -6,43 +6,24 @@ dependencies {
     implementation 'org.glassfish.jersey.media:jersey-media-multipart'
 }
 
-def artifactGroup = "${group}.rawls"
-
 task downloadRawlsYaml(type: Download) {
     // this was the latest git commit hash at development time
     src "https://raw.githubusercontent.com/broadinstitute/rawls/874b2e1bc6d95f90e1cf0db7569cfbaae9da34bf/core/src/main/resources/swagger/api-docs.yaml"
     dest "${buildDir}/rawls-api-docs.yaml"
 }
 
-/*
-generateSwaggerCode {
-    inputFile = file("${buildDir}/rawls-api-docs.yaml")
-    language = 'java'
-    library = 'jersey2'
+def artifactGroup = "${group}.rawls"
 
-    // For Swagger Codegen v3 on Java 16+
-    // See https://github.com/swagger-api/swagger-codegen/issues/10966
-    jvmArgs = ['--add-opens=java.base/java.util=ALL-UNNAMED']
+openApiGenerate {
+    inputSpec = "${buildDir}/rawls-api-docs.yaml"
+    generatorName = "java"
 
-    components = [
-        apiDocs  : false, apiTests: false,
-        modelDocs: false, modelTests: false
-    ]
+    apiPackage = "${artifactGroup}.api"
+    modelPackage = "${artifactGroup}.model"
+    invokerPackage = "${artifactGroup}.client"
 
-    additionalProperties = [
-        modelPackage  : "${artifactGroup}.model",
-        apiPackage    : "${artifactGroup}.api",
-        invokerPackage: "${artifactGroup}.client",
+    configOptions = [
         dateLibrary   : 'java11',
-        java8         : true
+        java8         : 'true'
     ]
-
-    rawOptions = ['--ignore-file-override', "${projectDir}/.swagger-codegen-ignore"]
 }
-
-generateSwaggerCode.dependsOn downloadRawlsYaml
-
-idea.module.generatedSourceDirs = [file("${generateSwaggerCode.outputDir}/src/main/java")]
-sourceSets.main.java.srcDir "${generateSwaggerCode.outputDir}/src/main/java"
-compileJava.dependsOn generateSwaggerCode
-*/
